2001-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* make_fvwmdist.sh (wrong_dir):
	fixed logic
	partially rewritten for portability reasons

2001-01-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* make_fvwmdist.sh (wrong_dir):
	portability fixes

2000-01-24  Mikhael Goikhman  <migo@homemail.com>

	fvwm-config.in:
	show gnomelibs and multibyte support in summary and options

2000-01-21  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-desktop.{in,1}:
	* fvwm-menu-directory.{in,1}:
	rewordings

2000-01-20  olicha  <olivier.chapuis@free.fr>

	* fvwm-menu-desktop.in:
	* fvwm-menu-desktop.1:
	New option --menu-style and fix check for perl >= 5.6
	(the value of $] is 5.006).

	* fvwm-menu-directory.in:
	* fvwm-menu-directory.1:
	New option --menu-style

2000-01-01  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-desktop.in:
	fixed execution on older perl < 5.6

2000-12-12  olicha  <olivier.chapuis@free.fr>

	* fvwm-menu-desktop.in:
	* fvwm-menu-desktop.1:
	New option --uniconv and --uniconv-exec for UTF8 encoding

2000-12-09  olicha  <olivier.chapuis@free.fr>

	* fvwm-menu-desktop.in:
	* fvwm-menu-desktop.1:
	New option --utf8 for UTF8 encoding (in KDE2)

2000-12-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* make_fvwmdist.sh:
	added environment variable to allow bringing up the network
	programmatically
	documentation in file

2000-11-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* make_fvwmdist.sh:
	make distcheck2

2000-11-19  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	fixed 'make distcheck' by adding $(top_srcdir)/utils/ path

2000-11-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* rebuild_dev.sh:
	added script that reconfigures and rebuilds fvwm
	* configure_dev.sh:
	script that calls automake, autoconf and configure
	* build_dev.sh:
	script that rebuilds fvwm with -Wall and -Werror

2000-11-13  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	replaced unportable $<

2000-11-10  Mikhael Goikhman  <migo@homemail.com>

	* make_fvwmdist.sh: